13-11-18

Shows 500 recently updated files

Fixed bug - SetsImport required FileSource - not fileName

Shows the sheet name when reporting the import

! Will accept a user choice list (from UserDAO) with multiple choices separated by commas

Reports associated with no databases no longer hidden


07-11-18

Pending upload search

Splits attributes where there is a NEXTATTRIBUTE (||) symbol

New heading 'replace' which accepts the last value rather than adding all values


06-11-18

Login message and colour configurable to distinguish between systems.

Important bug fix to new import code! (it was tripped up by very large numbers)


05-11-18-2

Formatting import error messages.

Zap pending uploads when deleting a database. Logon page override configurable. Factor properties code.


05-11-18

Updated groovy import script for premium.

Handles xls files with new import routines - some recent xls files show issues that need to be addressed but no Ed Broking data.

Importing brings the names of cells imported into line with the default display name of the value found.

New poi based reading of xlsx enabled. Much faster than ZK.


01-11-18

New 'check' work (not yet completed) - basic column validation for when users mix up columns in a data file

Fixed bug where ` was deleted from start of import string

Some work on how groovy scripts are loaded

Further work on new faster POI import, may be enabled early next week

Fixed nasty bug when saving using a temporary set. Lookup on temporary sets should be by user email/logon NOT name!


31-10-18-2

Removed the ZK importer optimization, it was causing a problem with sheet update detection (snap charts and resolve formulae function)


31-10-18

Initial version of pending uploads - only visible if some files actually are there to be processed

Batch importer line exceptions now pushed into "rejected lines" rather than stopping the whole import.
